--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                     <div class="col-lg-12 wow fadeInDown">
                         <div class="scheme_img">
                             <i><img src="assets/img/scheme.png" alt=""></i>
+                            <i class="scheme_mobile"><img src="assets/img/scheme_mobile.png" alt=""></i>
                         </div>
                     </div>
                 </div>
@@ -221,6 +222,7 @@
                     <div class="col-lg-12 wow fadeInDown">
                         <div class="Architecture_img">
                             <img src="assets/img/Architecture.png" alt="">
+                            <img class="Architecture_mobile" src="assets/img/Architecture_mobile.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-12 wow fadeInDown">
