--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row wow fadeInDown">
+                <div class="row ">
                     <div class="col-lg-12">
                         <div class="rodemap_img">
                             <img src="assets/img/rodemap.png" class="rd_desktop" alt="">
@@ -198,7 +198,7 @@
                             <h2>Non-custody infrastructure for Distributed Validator Technology </h2>
                         </div>
                     </div>
-                    <div class="col-lg-12 wow fadeInDown">
+                    <div class="col-lg-12 ">
                         <div class="scheme_img">
                             <i><img src="assets/img/scheme.png" alt=""></i>
                             <i class="scheme_mobile"><img src="assets/img/scheme_mobile.png" alt=""></i>
@@ -219,7 +219,7 @@
                             <h2>Resilient Validator Architecture</h2>
                         </div>
                     </div>
-                    <div class="col-lg-12 wow fadeInDown">
+                    <div class="col-lg-12 ">
                         <div class="Architecture_img">
                             <img src="assets/img/Architecture.png" alt="">
                             <img class="Architecture_mobile" src="assets/img/Architecture_mobile.png" alt="">
