--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
                     <div class="menu-area">
                         <nav>
                             <ul id="nav">
-                                <li><a href="#">Docs</a></li>
-                                <li><a href="#">Why</a></li>
-                                <li><a href="#">How</a></li>
-                                <li><a href="#">Roadmap</a></li>
+                                <li><a href="#Docs">Docs</a></li>
+                                <li><a href="#Why">Why</a></li>
+                                <li><a href="#How">How</a></li>
+                                <li><a href="#Roadmap">Roadmap</a></li>
                             </ul>
                         </nav>
                     </div>
                 </div>
                 <div class="col-lg-1 col-md-1 col-5">
                     <div class="join_btn">
-                        <button type="submit">join us</button>
+                        <a href="#join">
+                            <button type="submit">join us</button>
+                        </a>
                     </div>
                 </div>
 
@@ -59,17 +61,16 @@
     </div>
     <!-- mobile-menu START -->
     <div class="mobile-menu">
-        <a href="#" class="bars siteBar-btn"><svg class="bi bi-x" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <a href="javascript:void(0)" class="bars siteBar-btn"><svg class="bi bi-x" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z" clip-rule="evenodd"/>
             </svg></a>
         <nav>
             <ul id="nav">
-                <li><a href="#">Docs</a></li>
-                <li><a href="#">Why</a></li>
-                <li><a href="#">How</a></li>
-                <li><a href="#">Roadmap</a></li>
-                <li><a href="#">Join us</a></li>
+                <li><a href="#Docs">Docs</a></li>
+                <li><a href="#Why">Why</a></li>
+                <li><a href="#How">How</a></li>
+                <li><a href="#Roadmap">Roadmap</a></li>
             </ul>
         </nav>
     </div>
@@ -78,7 +79,7 @@
     <main>
 
         <!--hero_area Section START -->
-        <section class="hero_area">
+        <section class="hero_area" id="Docs">
             <div class="container">
                 <div class="row wow fadeInDown">
                     <div class="col-lg-12">
@@ -97,7 +98,7 @@
 
 
         <!--about_area Section START -->
-        <section class="about_area">
+        <section class="about_area" id="Why">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 wow fadeInDown">
@@ -138,7 +139,7 @@
 
 
         <!--rodemap_area Section START -->
-        <section class="rodemap_area bg-color">
+        <section class="rodemap_area bg-color" id="How">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 wow fadeInDown">
@@ -225,7 +226,7 @@
                             <img class="Architecture_mobile" src="assets/img/Architecture_mobile.png" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-12 wow fadeInDown">
+                    <div class="col-lg-12 wow fadeInDown" id="Roadmap">
                         <div class="sec_title white">
                             <h2>SafeStake Roadmap</h2>
                         </div>
@@ -268,7 +269,7 @@
 
 
         <!--newsLetter Section START -->
-        <section class="newsLetter">
+        <section class="newsLetter" id="join">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -418,6 +419,14 @@
         // menu 
         $('.siteBar-btn').click(function() {
             $('.mobile-menu').toggleClass('siteBar');
+        });
+        //Sticky Nav
+        $(window).scroll(function() {
+            if ($(this).scrollTop() > 100) {
+                $('.header-area').addClass('sticky')
+            } else {
+                $('.header-area').removeClass('sticky')
+            }
         });
     </script>
 </body>
